<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:padding="16dp"
    android:layout_height="wrap_content"
    android:focusable="false"
    android:focusableInTouchMode="false"
    >

    <ImageView
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:src="@drawable/ic_shopping_cart_black_24dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tenhang" />

            <TextView
                android:id="@+id/mh_tv_Tenhang"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="81dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/donvi" />

            <TextView
                android:id="@+id/mh_tv_donvi"
                android:layout_width="96dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="57dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/gia" />

            <TextView
                android:id="@+id/mh_tv_gia"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <TextView
                android:layout_width="74dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mieuta" />

            <TextView
                android:id="@+id/mh_tv_mieuta"
                android:layout_width="118dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <TextView
                android:layout_width="82dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/khoiluong" />

            <TextView
                android:id="@+id/mh_tv_khoiluong"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="93dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:focusable="false"
        android:focusableInTouchMode="false">

        <CheckBox
            android:id="@+id/checkbox_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1" />

        <ImageView

            android:id="@+id/item_iv_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:src="@drawable/ic_autorenew_black_24dp" />

        <ImageView
            android:id="@+id/item_iv_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:src="@drawable/ic_delete_black_24dp" />

    </LinearLayout>
</LinearLayout>
